@@ -1,7 +1,7 @@
 package io.github.therealmone.tdf4j.tdfparser;
 
-import io.github.therealmone.tdf4j.model.ebnf.Grammar;
-import io.github.therealmone.tdf4j.model.ebnf.Production;
+import io.github.therealmone.tdf4j.model.Grammar;
+import io.github.therealmone.tdf4j.model.Production;
 import org.junit.Test;
 
 import static org.junit.Assert.*;
@@ -14,77 +14,77 @@ public class SyntaxTest extends TdfParserTest {
         System.out.println(tdfParser.getParserModule().build().getGrammar());
         final Grammar grammar = tdfParser.getParserModule().getGrammar();
 
-        assertEquals(8, grammar.productions().size());
+        assertEquals(8, grammar.getProductions().size());
 
         //[0] - or
         {
-            final Production production = grammar.productions().get(0);
-            assertEquals("or", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals("A", production.elements().get(0).asOr().first().asTerminalTag().value());
-            assertEquals("non_terminal", production.elements().get(0).asOr().second().asNonTerminal().identifier());
+            final Production production = grammar.getProductions().get(0);
+            assertEquals("or", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals("A", production.getElements().get(0).asOr().getFirst().asTerminalTag().getValue());
+            assertEquals("non_terminal", production.getElements().get(0).asOr().getSecond().asNonTerminal().getValue());
         }
 
         //[1] - non_terminal
         {
-            final Production production = grammar.productions().get(1);
-            assertEquals("non_terminal", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals("terminal", production.elements().get(0).asNonTerminal().identifier());
+            final Production production = grammar.getProductions().get(1);
+            assertEquals("non_terminal", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals("terminal", production.getElements().get(0).asNonTerminal().getValue());
         }
 
         //[2] - repeat
         {
-            final Production production = grammar.productions().get(2);
-            assertEquals("repeat", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals(2, production.elements().get(0).asRepeat().elements().length);
-            assertEquals("A", production.elements().get(0).asRepeat().elements()[0].asTerminalTag().value());
-            assertEquals("non_terminal", production.elements().get(0).asRepeat().elements()[1].asNonTerminal().identifier());
+            final Production production = grammar.getProductions().get(2);
+            assertEquals("repeat", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals(2, production.getElements().get(0).asRepeat().getElements().length);
+            assertEquals("A", production.getElements().get(0).asRepeat().getElements()[0].asTerminalTag().getValue());
+            assertEquals("non_terminal", production.getElements().get(0).asRepeat().getElements()[1].asNonTerminal().getValue());
         }
 
         //[3] - inline_action
         {
-            final Production production = grammar.productions().get(3);
-            assertEquals("inline_action", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals("System.out.println(\"test\");", production.elements().get(0).asInlineAction().code());
+            final Production production = grammar.getProductions().get(3);
+            assertEquals("inline_action", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals("System.out.println(\"test\");", production.getElements().get(0).asInlineAction().getCode());
         }
 
         //[4] - optional
         {
-            final Production production = grammar.productions().get(4);
-            assertEquals("optional", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals("A", production.elements().get(0).asOptional().elements()[0].asTerminalTag().value());
-            assertEquals("non_terminal", production.elements().get(0).asOptional().elements()[1].asNonTerminal().identifier());
+            final Production production = grammar.getProductions().get(4);
+            assertEquals("optional", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals("A", production.getElements().get(0).asOptional().getElements()[0].asTerminalTag().getValue());
+            assertEquals("non_terminal", production.getElements().get(0).asOptional().getElements()[1].asNonTerminal().getValue());
         }
 
         //[5] - terminal
         {
-            final Production production = grammar.productions().get(5);
-            assertEquals("terminal", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals("A", production.elements().get(0).asTerminalTag().value());
+            final Production production = grammar.getProductions().get(5);
+            assertEquals("terminal", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals("A", production.getElements().get(0).asTerminalTag().getValue());
         }
 
         //[6] - repetition
         {
-            final Production production = grammar.productions().get(6);
-            assertEquals("repetition", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals(3, production.elements().get(0).asRepetition().times());
-            assertEquals("A", production.elements().get(0).asRepetition().element().asGroup().elements()[0].asTerminalTag().value());
-            assertEquals("non_terminal", production.elements().get(0).asRepetition().element().asGroup().elements()[1].asNonTerminal().identifier());
+            final Production production = grammar.getProductions().get(6);
+            assertEquals("repetition", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals(3, production.getElements().get(0).asRepetition().getTimes());
+            assertEquals("A", production.getElements().get(0).asRepetition().getElement().asGroup().getElements()[0].asTerminalTag().getValue());
+            assertEquals("non_terminal", production.getElements().get(0).asRepetition().getElement().asGroup().getElements()[1].asNonTerminal().getValue());
         }
 
         //[7] - group
         {
-            final Production production = grammar.productions().get(7);
-            assertEquals("group", production.identifier().identifier());
-            assertEquals(1, production.elements().size());
-            assertEquals("A", production.elements().get(0).asGroup().elements()[0].asTerminalTag().value());
-            assertEquals("non_terminal", production.elements().get(0).asGroup().elements()[1].asNonTerminal().identifier());
+            final Production production = grammar.getProductions().get(7);
+            assertEquals("group", production.getIdentifier().getValue());
+            assertEquals(1, production.getElements().size());
+            assertEquals("A", production.getElements().get(0).asGroup().getElements()[0].asTerminalTag().getValue());
+            assertEquals("non_terminal", production.getElements().get(0).asGroup().getElements()[1].asNonTerminal().getValue());
         }
     }
 }
